--- a/defectGeneration/gui/test.ui
+++ b/defectGeneration/gui/test.ui
@@ -229,9 +229,6 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
-            <property name="plainText">
-             <string/>
-            </property>
             <property name="placeholderText">
              <string>standard mean</string>
             </property>
@@ -254,9 +251,6 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
-            <property name="plainText">
-             <string/>
-            </property>
             <property name="placeholderText">
              <string>standard deviation</string>
             </property>
@@ -265,7 +259,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="1,3,3">
+         <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="1,6">
           <item>
            <widget class="QLabel" name="label_17">
             <property name="minimumSize">
@@ -275,7 +269,7 @@
              </size>
             </property>
             <property name="text">
-             <string>Angle</string>
+             <string>Vertices</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -283,7 +277,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPlainTextEdit" name="angle_mean_input">
+           <widget class="QPlainTextEdit" name="vertices_input">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
               <horstretch>0</horstretch>
@@ -300,12 +294,32 @@
              <bool>true</bool>
             </property>
             <property name="placeholderText">
-             <string>standard mean</string>
+             <string>amount of vertices</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="1,6">
+          <item>
+           <widget class="QLabel" name="label">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>31</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Angle variance</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPlainTextEdit" name="angle_stddev_input">
+           <widget class="QPlainTextEdit" name="angle_variance_input">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
               <horstretch>0</horstretch>
@@ -322,7 +336,7 @@
              <bool>true</bool>
             </property>
             <property name="placeholderText">
-             <string>standard deviation</string>
+             <string>percentage between 0.0 and 100.0</string>
             </property>
            </widget>
           </item>
@@ -469,6 +483,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="preview_button">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Preview</string>
           </property>
@@ -476,6 +493,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="clear_preview_button">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Clear</string>
           </property>
@@ -502,7 +522,7 @@
       <item>
        <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>Generation</string>
+         <string>Image Generation</string>
         </property>
        </widget>
       </item>
@@ -693,12 +713,6 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="sizeIncrement">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
         </property>
         <property name="text">
          <string/>
