--- a/defectGeneration/gui/qt_window.ui
+++ b/defectGeneration/gui/qt_window.ui
@@ -771,11 +771,21 @@
        </spacer>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_12">
+       <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="2,1,9">
         <item>
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Image generation progress</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>0 / 0</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
